@@ -426,6 +426,7 @@
 		<Product type="1182" id="4501" name="iTemp Dual Sensor" config="schlagelink/itemp.xml" />
 		<Product type="1188" id="4501" name="iTemp Dual Sensor" config="schlagelink/itemp.xml" />
 		<Product type="6941" id="5501" name="LE120 Appliance Module"/>
+		<Product type="6131" id="4501" name="Mini Keypad RFID" config="schlagelink/minikeypad.xml" />
 	</Manufacturer>
 	<Manufacturer id="001f" name="Scientia Tech">
 	</Manufacturer>
